# PaRRot

./: .gitignore  .gitmodules  AGENTS.md  CMakeCache.txt  CMakeLists.txt  FetchContentDependencies.cmake  LICENSE  Makefile  README.md  cmake_install.cmake  prepare_csv.py  prepare_stops.py
Inputs/RawData/Boundaries/: Berlin_Outer.poly
Inputs/RawData/Demand/: Berlin-1pct.csv
KARRI/: CMakeCache.txt  Makefile  assert_ex.h  cmake_install.cmake
KARRI/Algorithms/Buckets/: DynamicBucketContainer.h  LastStopBucketContainer.h  SharedSearchSpaceBucketContainer.h  SortedBucketContainer.h
KARRI/Algorithms/CCH/: CCH.h  CCHMetric.h  EliminationTreeQuery.h  UpwardEliminationTreeSearch.h
KARRI/Algorithms/CH/: CH.h  CHPathUnpacker.h  CHQuery.h
KARRI/Algorithms/Dijkstra/: BiDijkstra.h  DagShortestPaths.h  Dijkstra.h
KARRI/Algorithms/GraphTraversal/: DepthFirstSearch.h  StronglyConnectedComponents.h
KARRI/Algorithms/KaRRi/: AssignmentFinder.h  CCHEnvironment.h  CHEnvironment.h  CostCalculator.h  EventSimulation.h  InputConfig.h  PathTracker.h  RouteState.h  SimulateOnlyRequests.h  SystemStateUpdater.h  TimeUtils.h
KARRI/DataStructures/Containers/: BitVector.h  Subset.h  (+3 more)
KARRI/Launchers/: CMakeCache.txt  Dispatcher.cpp  KaRRi.cpp  Makefile  RunP2PAlgo  cmake_install.cmake  karri
KARRI/RawData/: CMakeCache.txt  CMakeLists.txt  CheckExistingAttributesInNetworkFile  ConvertGraph  ConvertGraph.cc  DrawRandomDepartureTimes  GenerateGeoJsonForGraph  GenerateGeoJsonForRequests  GenerateGeoJsonForVehicles  GenerateODPairs  GenerateRandomVehicles  Makefile  ODPairGenerator.h  OsmToCarAndPassengerGraph  TransformLocations  TransformLocations.cc  cmake_install.cmake
KARRI/Tools/: BinaryIO.h  Bitwise.h  CompilerSpecific.h  ConcurrentHelpers.h  Constants.h  DateHelpers.h  EnumParser.h  LexicalCast.h  MachineSpecs.h  Math.h  OpenMP.h  StringHelpers.h  TemplateProgramming.h  Timer.h  Workarounds.h
PTaxi/: ApproximateCombinedTripResult.h  BestPTJourneyChoice.h  CarResult.h  CarTripFinder.h  DALSToStations.h  FirstTaxiSharingLeg.h  InsertionType.h  IntermediateResultStats.h  KaRRiBaseInfo.h  KaRRiBaseInfoPreparator.h  LastStopToStationBCHQuery.h  NoOpPTAndTaxiTripFinder.h  OrdinaryToStations.h  PALSToStations.h  PBNSToStations.h  PTAndTaxiTripFinder.h  PTAndTaxiTriple.h  PTJourneyFinder.h  Results.h  Station.h  StationBCHQuery.h  StationBucketContainer.h  StationBucketsEnvironment.h  StationEntry.h  StationsInEllipse.h  StopAndStationBucketsEnvironment.h  TaxiLegApproximation.h  TaxiResult.h  TaxiTripFinder.h  TaxiULTRARAPTOR.h  TentativeStationDistances.h  WalkingResult.h  WalkingTripFinder.h  util.h
PTaxi/FirstTaxiLeg/: AccessRPTrip.h  DALSToStations.h  FirstTaxiLegResult.h  OrdinaryToStations.h  PALSToStations.h  PBNSToStations.h  StationBCHQuery.h  StationDistanceFinder.h  StationsAtLocations.h
PTaxi/PTLeg/: OldTaxiULTRARAPTOR.h  PTResult.h  ParrotCombinedULTRAMcRAPTOR.h  ParrotInitialTransfers.h  ParrotPTOnlyULTRAMcRAPTOR.h  ParrotPTOnlyULTRARAPTOR.h  TaxiInitialTransfers.h  TaxiULTRACostRAPTOR.h  TaxiULTRARAPTOR.h
PTaxi/RiderModeChoice/: CostCriterion.h  ModeChoice.h  ModeChoiceInput.h  ModeChoiceInputStats.h  PTJourneyData.h  TransportMode.h  TripTimeThresholdCriterion.h  UtilityLogitCriterion.h
PTaxi/SecondTaxiLeg/: HeuristicEgressTripFinder.h  TaxiLegApproximation.h
PTaxi/Station/: NoOpStationsInEllipse.h  Station.h  StationBucketContainer.h  StationBucketsEnvironment.h  StationEntry.h  StationsInEllipse.h  TentativeStationDistances.h
PTaxi/Stats/: IntermediateResultStats.h
RawData/: BuildStaticBuckets.cc  CMakeLists.txt  CheckExistingAttributesInNetworkFile.cc  ConvertGraph.cc  DrawRandomDepartureTimes.cc  GenerateGeoJsonForGraph.cc  GenerateGeoJsonForRequests.cc  GenerateGeoJsonForVehicles.cc  GenerateODPairs.cc  GenerateRandomVehicles.cc  KarriRequestsToParrotRawFormat.cc  ODPairGenerator.h  OsmToCarAndPassengerGraph.cc  OsmToPassengerGraph.cc  RunP2PAlgo.cc  TransformLocations.cc  TransformRequests.cc  add_req_time_to_origin_destination.sh  days_interval_to_num_seconds.sh  demand_source_to_transform_locations_format.sh  divide_weights_by_10_in_dimacs.sh  get_bounding_box_from_poly.sh
RawData/LocationMapper/: CloseEligibleVertexChooser.h  InputLocationToLatLngMapper.h  LatLngToTargetVertexMapper.h  LocationMapper.h  TargetVertexToOutputLocation.h  Utils.h
RawData/Scripts/: FilterGenericOSMData.sh  PreprocessOSMData.sh
Runners/: CMakeCache.txt  CMakeLists.txt  KaRRi_compile_params_PTaxi.cmake  KaRRi_compile_time_parameters.cmake  Makefile  RunKaRRi.cpp  RunPTaxi.cpp  RunRideRaptor.cpp  RunSingleQueries.cpp  RunULTRARAPTOR.cpp  StartRideRAPTOR.sh  cmake_install.cmake  eval.R  run_ptaxi.sh
ULTRA/Algorithms/: DepthFirstSearch.h  StronglyConnectedComponents.h
ULTRA/Helpers/: Assert.h  Calendar.h  ConstructorTags.h  Helpers.h  HighlightText.h  Meta.h  MultiThreading.h  TaggedInteger.h  Timer.h  Types.h
ULTRA/RawData/: ODPairGenerator.h
ULTRA/Runnables/: GTFSToRAPTOR.script  KaRRi.cpp  Makefile  Network  Network.cpp  ULTRA  ULTRA.cpp  ULTRAPHAST.cpp  readcache
ULTRA/Shell/: BasicShell.h  Command.h  LineBuffer.h  ParameterizedCommand.h  Shell.h
ULTRA/Tools/: BinaryIO.h  Bitwise.h  CompilerSpecific.h  ConcurrentHelpers.h  Constants.h  ContainerHelpers.h  DateHelpers.h  EnumParser.h  LexicalCast.h  Math.h  StringHelpers.h  TemplateProgramming.h  Timer.h  Workarounds.h
ULTRA_Runnables/: BuildBerlinNetwork.script  BuildInputDataFull.sh  BuildRoadNetworks.sh  BuildTransferShortcutGraph.sh  CMakeLists.txt  DelayExperiments.cpp  GTFSToRAPTOR.script  Makefile  Network.cpp  PrepareRAPTORData.sh  PrepareRequestsAndVehicles.sh  PrepareRoadPTMapping.sh  ProcessRawGTFS.sh  ProcessRawOSM.sh  README.md  RunULTRAScript.cpp  ULTRA.cpp  ULTRAPHAST.cpp  config_Berlin.txt  downloadBerlinGTFS.sh  osmfilter_parameters.txt  readcache
ULTRA_Runnables/Commands/: BenchmarkMcULTRA.h  BenchmarkMultimodal.h  BenchmarkULTRA.h  BenchmarkULTRAPHAST.h  CH.h  DelayExperiments.h  KaRRi.h  NetworkIO.h  NetworkTools.h  ULTRAPreprocessing.h
include/Common/: Constants.h  TimeConversion.h
(+711 files in other folders)
